NAS-114633: Fixed ix-input value overlap icon (#6393)

--- a/src/app/modules/ix-forms/components/ix-input/ix-input.component.scss
+++ b/src/app/modules/ix-forms/components/ix-input/ix-input.component.scss
@@ -97,3 +97,7 @@
   font-size: 12px;
   margin-top: 3px;
 }
+
+.has-reset-input-icon {
+  padding-right: 20px;
+}
